--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <header>
         <nav>
     <ul>
-      <li><a href="index.html"></a><strong>Home</strong></li>
+      <li><a href="index.html"></a><strong>Centering Communities During COVID</strong></li>
       <li><a href="aboutus.html">About Us</a></li>
     </ul>
   </nav>
         <div class="container">
             <h1> The <span>Impact of COVID-19</span> on Boston Local Minority Businesses </h1>
+            <div class="foo"></div>
         </div>
     </header>  
     <main>
@@ -71,12 +72,11 @@
             <h3> Learn More About the Local Businesses in Boston</h3>
             <div class="cta"> 
                 <button class="chinatown-button"> <a href="chinatown.html">Asian Garden in Chinatown</a> </button>
-                <button class="revere-button"> <a href="eastboston.html">Revere Restaurant</a> </button>
+                <button class="revere-button"> <a href="eastboston.html">El Pelon in East Boston</a> </button>
             </div>
-
         </div>
-        
     </main>
+    <div class="foo2"></div>
   </body>
 
   <footer></footer>
@@ -87,5 +87,6 @@
 
 </body>
 </html>
+
 
 
