--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -3,14 +3,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="aboutus.css">
-    <title>The Impact of COVID-19: El Pelon in East Boston</title>
+    <title>About Us</title>
   </head>
 
   <body>  
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"></a><strong>Centering Communities During COVID</strong></li>
+                <li><a href="index.html">Centering Communities During COVID</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
