--- a/html/eastboston.html
+++ b/html/eastboston.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"></a><strong>Home</strong></li>
-                <li><a href="aboutus.html">Centering Communities During COVID</a></li>
+                <li><a href="index.html">Centering Communities During COVID</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <div class="ag-name">
