--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
     <ul>
-      <li><a href="index.html"></a><strong>Centering Communities During COVID</strong></li>
+      <li><a href="index.html">Centering Communities During COVID</a></li>
       <li><a href="aboutus.html">About Us</a></li>
     </ul>
   </nav>
