--- a/html/chinatown.html
+++ b/html/chinatown.html
@@ -41,6 +41,20 @@
         <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely fail to pick it up, which resulted in wasted food and expenses.</p>
         <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
        </div> 
+       <div class="support"> 
+        <h1>Here's How You Can Help</h1>
+        <ul>
+            <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
+                <figure>  
+                    <img class="takeout" src="IMG_3527 2.png">
+                    <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+                </figure>
+            <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4/"> here </a> to donate. </li>
+            <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click here to share this website on your social media. </li>
+            <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
+        </ul>
+       </div>
+       <div class="foo blue"> </div>
     
     </main>
 </body>
