--- a/html/chinatown.html
+++ b/html/chinatown.html
@@ -6,58 +6,43 @@
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
   </head>
 
-  <body>  
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Centering Communities During COVID</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-            </ul>
-        </nav>
-        <div class="ag-name">
-            <h1>Asian Garden Restaurant</h1>
-        </div>
-        <div class="ag-address">
-            <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
-        </div>
-    </header>
-    <main>
-       <div class="introduction">
-           <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
-           <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
-           <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
-       </div> 
-       <div class="profile">
-            <h1> About the Business Owner </h1>
-            <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
-            <p> When I asked him why he started his restaurant, he responded <span>“Because it is my passion”</span>.</p>
-            <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
-       </div>
-       <div class="impact">
-        <h1> Struggling with Multiple Pandemics </h1>
-        <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
-        <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
-        <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
-        <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely fail to pick it up, which resulted in wasted food and expenses.</p>
-        <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
-       </div> 
-       <div class="support"> 
-        <h1>Here's How You Can Help</h1>
-        <ul>
-            <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
-                <figure>  
-                    <img class="takeout" src="IMG_3527 2.png">
-                    <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
-                </figure>
-            <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4/"> here </a> to donate. </li>
-            <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click here to share this website on your social media. </li>
-            <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
-        </ul>
-       </div>
-       <div class="foo blue"> </div>
-    
-    </main>
-</body>
+  <main>
+    <div class="introduction">
+        <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
+        <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
+        <img class="inside1" src="/assets/inside of restaurant.png">
+        <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
+    </div> 
+    <div class="profile">
+     <h1> About the Business Owner </h1>
+     <img class="agowner" src="/assets/ownerkawa.png" alt="picture of business owner kawa">
+     <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
+     <p> When I asked him why he started his restaurant, he responded <span>“Because it is my passion”</span>.</p>
+     <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
+    </div>
+    <div class="impact">
+     <h1> Struggling with Multiple Pandemics </h1>
+     <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
+     <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
+     <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
+     <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely fail to pick it up, which resulted in wasted food and expenses.</p>
+     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
+    </div> 
+    <div class="support"> 
+     <h1>Here's How You Can Help</h1>
+     <ul>
+         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
+             <figure>  
+                 <img class="takeout" src="/assets/IMG_3527 2.png">
+                 <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+             </figure>
+         <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4/"> here </a> to donate. </li>
+         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click here to share this website on your social media. </li>
+         <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
+     </ul>
+    </div>
+    <div class="foo blue"> </div>
+ </main>
 
 <footer></footer>
 
