edits to east boston story

--- a/html/eastboston.html
+++ b/html/eastboston.html
@@ -27,30 +27,30 @@
             <h2> El Penol is a local, family-run, Colombian restaurant located at 54 Bennington St, Boston, MA 02128 in East Boston. They serve authentic Colombian food, and they’re known for their famous dish, the Bandejo Penol. They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years.  </h2>
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
-            <img class="inside1" src="inside of restaurant.png">
+            <img class="inside1" src="/assets/IMG_1560.png">
             <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re family, and the smell of really good food.  </p>
         </div> 
         <div class="profile">
          <h1> About the Business Owner </h1>
-         <img class="agowner" src="ownerkawa.png" alt="picture of business owner kawa">
-         <p> It all started when Marina Balvin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
+         <img class="agowner" src="/assets/maria-balbin.png" alt="picture of business owner maria balbin">
+         <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
         <div class="impact">
          <h1> Adapting to the Pandemic </h1>
          <p> Before the pandemic, El Pelon was doing business normally. The pandemic only ever affected it by implementing the rules and regulations for everyone’s safety, and laying off some employees and cutting hours. 
          <p>El Pelon shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
-         <p>People were scared and afraid to come out of their houses. The latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
+         <p>People were scared and afraid to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
-         <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to latinx businesses. </p>
-         <blockquote class="blockquote"> “Us latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
+         <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
+         <blockquote class="blockquote"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
         </div> 
         <div class="support"> 
          <h1>Here's How You Can Help</h1>
          <ul>
             <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Pelon in East Boston. Click the button to get access to the menu and for takeout options. </li>
             <figure>  
-                <img class="takeout" src="117108314_2579134242189444_2235551365629470503_n.png">
+                <img class="takeout" src="/assets/117108314_2579134242189444_2235551365629470503_n.png">
                 <figcaption>The famous Bandejo Penol</figcaption>
             </figure>
             <li><button class="support-AG"> <a href="https://hispanicstar.org/donate/">Donate</a> </button> to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
