--- a/html/index.html
+++ b/html/index.html
@@ -27,8 +27,8 @@
             <p> The pandemic amplified a huge gap between white and minority communities including access to food, economic resources, job opportunities, and education. Because communities of color face more economic insecurity and often work service jobs, they face a greater risk of exposure to the virus, and thus are disproportionately affected by COVID-19. </p>
         </div>
         <div class="stats-set1"> 
-            <h2> 25% of the Boston population is Black and 52.8% is white. 19.8% of the Boston population is Latinx. </h2>
-            <h2>Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </h2>
+            <p> <span>25%</span> of the Boston population is Black, <span>19.8%</span> of the Boston population is Latinx, and <span>52.8%</span> is white. </p>
+            <p>Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </p>
         </div>
         <div class="overview-part-2">
             <p> You can see the disparity within each neighborhood. Neighborhoods like Dorchestor, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
@@ -61,10 +61,11 @@
        
             
             <div class="overview-part-3">
-                <p> In short, the pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
+                <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
                 <p> We decided to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
-                <blockquote> "The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families," -Suzanne P. Clark, president of the U.S. Chamber </blockquote>
+                <div class="foo3"></div>
+                <blockquote> "The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families," <br> <cite> -Suzanne P. Clark, president of the U.S. Chamber</cite> </blockquote>
             </div>
         </div>
 
