--- a/html/chinatown.html
+++ b/html/chinatown.html
@@ -2,10 +2,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/chinatown.css">
+    <link rel="stylesheet" href="chinatown.css">
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
   </head>
 
+  <body>  
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Centering Communities During COVID</a><strong></strong></li>
+                <li><a href="aboutus.html">About Us</a></li>
+            </ul>
+        </nav>
+        <div class="ag-name">
+            <h1>Asian Garden Restaurant</h1>
+        </div>
+        <div class="ag-address">
+            <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
+        </div>
+    </header>
+    
   <main>
     <div class="introduction">
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
@@ -36,8 +52,8 @@
                  <img class="takeout" src="/assets/IMG_3527 2.png">
                  <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
              </figure>
-         <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4/"> here </a> to donate. </li>
-         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click here to share this website on your social media. </li>
+         <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click the button to donate. </li>
+         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click the button share this website on your social media. </li>
          <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
      </ul>
     </div>
