media query edits

--- a/html/chinatown.html
+++ b/html/chinatown.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="chinatown.css">
+    <link rel="stylesheet" href="/styles/chinatown.css">
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
   </head>
 
@@ -21,7 +21,7 @@
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
         </div>
     </header>
-    
+
   <main>
     <div class="introduction">
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
