--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </ul>
   </nav>
         <div class="container">
-            <h1> The <span>Impact of COVID-19</span> on Boston Local Minority Businesses </h1>
+            <h1> The <span>Impact of COVID-19</span> on Boston Minority Businesses </h1>
             <div class="foo"></div>
         </div>
     </header>  
