changes to stylesheets

--- a/eastboston.html
+++ b/eastboston.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/eastboston.css">
+    <link rel="stylesheet" href="styles/eastboston.css">
     <title>The Impact of COVID-19: El Pelon in East Boston</title>
   </head>
 
