--- a/chinatown.html
+++ b/chinatown.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/chinatown.css">
+    <link rel="stylesheet" href="styles/chinatown.css">
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
   </head>
 
