--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
         <h1 class="about-us">About Us</h1>
         <div class="block2"> </div>
         <div class="block"> </div>
-
+    </header>
     <main>
         <section class="selina">
             <h1>Selina Li</h1>
