--- a/eastboston.html
+++ b/eastboston.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/eastboston.css">
+    <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: El Pelon in East Boston</title>
   </head>
 
