--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/aboutus.css">
+    <script href="scripts/script.js" defer></script>
     <title>About Us</title>
   </head>
 
