--- a/chinatown.html
+++ b/chinatown.html
@@ -21,6 +21,10 @@
         <div class="ag-address">
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
         </div>
+        <div class="to-ag-video"> <video width="50%" height="auto" controls muted>
+            <source src="assets/asian garden video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video> <p>en-route to asian garden</p></div>
     </header>
 
   <main>
