--- a/eastboston.html
+++ b/eastboston.html
@@ -21,6 +21,10 @@
         <div class="ag-address">
             <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
         </div>
+        <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
+            <source src="assets/walking to el polon.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video> <p>en-route to el pelon</p></div>
     </header>
 
     <main>
